spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__completion_on_field_not_in_target.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {}
        impl NameOfStruct {
            fn method(self) {}
        }

        fn foo() -> bool {
            let s = NameOfStruct();

            let _ = s.
                 // ^[1] completion

            let another = false;

            false
        }
    
---code ⬆️ completion ⬇️ ---
Memory [Memory]	Memory
NameOfStruct	NameOfStruct
NameOfStruct()	NameOfStruct()$0
_	-
bool [bool]	bool
clock [clock]	clock
foo()	foo()$0
inout [inout]	inout
int [int]	int
proj [proj]	proj
s	-
tri [tri]	tri
uint [uint]	uint
