spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__completion_on_in_progress_field.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {}
        impl NameOfStruct {
            fn method(self) {}
        }

        fn foo() -> bool {
            let s = NameOfStruct();

            let _ = s.aaa
                   // ^[1] completion

            let another = false;

            false
        }
    
---code ⬆️ completion ⬇️ ---
method()	method()$0
