spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__dot_completion_does_not_double_fill_inst.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {}
        impl NameOfStruct {
            entity func(self) {}
            pipeline(1) funct(self, clk: clock) {reg;}
        }

        fn foo() {
            NameOfStruct().inst 
            
            // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
func()	func()$0
funct(…)	(1) funct(${1:clk})$0
