spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__dot_completion_runs_on_next_line.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {
            f1: bool,
            field2: bool,
        }
        impl NameOfStruct {
            fn func(self) {}
        }

        fn foo() {
            NameOfStruct(false, false).
            
             // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
f1	-
field2	-
func()	func()$0
