spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__enum_variants_are_path_completed_in_incomplete_contexts2.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        enum A {
            B,
            C{x: bool},
        }

        fn main() {
            let A::
                // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
B	B
C(…)	C(${1:x})$0
